--- a/qr-style.css
+++ b/qr-style.css
@@ -12,27 +12,34 @@ h2 {
   margin-left: 170px;
   margin-top: 50px;
 }
-#qr-scanner{
-  margin-bottom: 50px;
-}
+
 #reader {
   width: 600px;
   height: 400px;
   border: 2px solid #000;
+  border-radius: 10px;
   overflow: hidden;
   margin-left: 30px;
 }
 #result {
+  font-family: "Open Sans", sans-serif;
+  border: 1px solid;
+  border-color: #000;
+  border-radius: 11px;
+  padding: 10px;
+  width: 400px;
+  height: 230px;
+  background-color: whitesmoke;
   position: absolute;
-  font-size: 18px;
-  margin-top: 100px;
-  margin-left: 50%;
+  font-size: 20px;
+  margin-top: 150px;
+  margin-left: 49%;
   color: #000;
+  font-weight: 500;
 }
 #startBtn {
   position: absolute;
   margin-left: 50%;
-  margin-bottom: 20%;
   margin-top: 29%;
   width: 300px;
   height: 50px;
@@ -48,6 +55,11 @@ h2 {
   border-radius: 20px;
 }
 #scan {
+  margin-top: 10px;
+  width: 100%;
+  height: 600px;
   display: flex;
   flex-direction: column;
+  border-radius: 10px;
+  background-color: white;
 }
